# rinha-de-backend-2023-q3

./: .gitignore  Cargo.toml  config.toml  docker-compose.yml  nginx.conf  run.sh
api/: Cargo.toml  Dockerfile
api/src/: domains.rs  handler.rs  http.rs  main.rs  repositories.rs  server.rs
api/src/http/: codec.rs  response.rs
api/src/repositories/: sql.rs
lb/: Cargo.toml  Dockerfile  config.toml
lb/src/: config.rs  connection.rs  main.rs  op.rs  server.rs  target.rs  upstream.rs
lb/src/server/: bridge.rs  buffer.rs  connection_slot.rs  load_balancer.rs  target.rs  worker.rs
