[package]
name = "api"
version = "0.1.0"
authors = ["Luiz Carvalho <luizcmpc@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
bytes = "1.4.0"
crossbeam-queue = "0.3.8"
futures-util = { version = "0.3.28", default-features = false }
http = "0.2.9"
memchr = "2.5.0"
mime = "0.3.17"
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "time",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
], default-features = false }
thiserror = "1.0.44"
time = { version = "0.3.25", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.30.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }
